fix: menu z-index

--- a/src/scss/components/_burger.scss
+++ b/src/scss/components/_burger.scss
@@ -15,7 +15,7 @@
     position: absolute;
     top: 141px;
     right: 55px;
-    z-index: 3;
+    z-index: 4;
     display: flex;
     flex-direction: column;
     padding: 10px;
